# KohakuRAG

./: .gitignore  README.md  pyproject.toml
configs/: aggregate.py  stats.py  validate.py  visualize.py
configs/jinav4/: answer.py  index.py
configs/sweeps/: model_sweep.py
configs/text_only/: answer.py  index.py
configs/with_images/: answer.py  index.py
configs/workflows/: ensemble_runner.py  with_image_pipeline.py
docs/: api_reference.md  architecture.md  dedup_rerank.md  deployment.md  image_rag_example.md  jinav4_workflows.md  usage.md  wattbot.md
scripts/: pdf_to_documents.py  visualize_embeddings.py  wattbot_add_image_captions.py  wattbot_aggregate.py  wattbot_answer.py  wattbot_build_image_index.py  wattbot_build_index.py  wattbot_demo_query.py  wattbot_fetch_docs.py  wattbot_inspect_node.py  wattbot_smoke.py  wattbot_stats.py  wattbot_token_count.py  wattbot_validate.py
scripts/report/: analyze_errors.py  analyze_leaderboard.py  parse_sweeps.py
src/kohakurag/: __init__.py  datastore.py  embeddings.py  indexer.py  llm.py  parsers.py  pdf_utils.py  pipeline.py  text_utils.py  vision.py
workflows/: ensemble_runner.py  ensemble_runner_test.py  jinav4_ensemble_runner.py  jinav4_ensemble_runner_test.py  jinav4_pipeline.py
workflows/indexing/: jina_v3_text_image.py  jina_v3_text_only.py  jina_v4_text_image.py
workflows/sweeps/: llm_model_vs_embedding.py
workflows/wattbot_competition/: jinav4_ensemble_runner_test-gemini-full.py
